--- a/SendUsermag/.classpath
+++ b/SendUsermag/.classpath
@@ -6,7 +6,9 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/mail.jar"/>
+	<classpathentry kind="lib" path="D:/activation.jar"/>
+	<classpathentry kind="lib" path="D:/java-mail-1.4.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
